<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/toolbar"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_width="0dp"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/settings"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rlCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="18dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="KeyboardInaccessibleWidget">

        <TextView
            android:id="@+id/tvCityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/city"
            android:textColor="#333333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCityTitle"
            android:layout_alignStart="@+id/tvCityTitle"
            android:layout_marginEnd="18dp"
            android:fontFamily="@font/montserrat_alternates"
            android:textColor="#7f7f7f"
            android:textSize="14sp"
            tools:text="Chelny" />


    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/descTextColor4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlCity" />

    <RelativeLayout
        android:id="@+id/rlDateBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:ignore="KeyboardInaccessibleWidget">

        <TextView
            android:id="@+id/tvDateBirthTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/your_childs_age"
            android:textColor="#333333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDateBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDateBirthTitle"
            android:layout_alignStart="@+id/tvDateBirthTitle"
            android:layout_marginEnd="18dp"
            android:fontFamily="@font/montserrat_alternates"
            android:textColor="#7f7f7f"
            android:textSize="14sp"
            tools:text="Chelny" />
    </RelativeLayout>


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/descTextColor4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlDateBirth" />


    <TextView
        android:id="@+id/tvWriteToDeveloper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:fontFamily="@font/montserrat_alternates"
        android:gravity="start"
        android:padding="16dp"
        android:text="@string/email_developer"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        tools:ignore="KeyboardInaccessibleWidget" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/descTextColor4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWriteToDeveloper" />

    <TextView
        android:id="@+id/tvPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:fontFamily="@font/montserrat_alternates"
        android:gravity="start"
        android:padding="16dp"
        android:text="@string/privacy_policy"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        tools:ignore="KeyboardInaccessibleWidget" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/descTextColor4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrivacyPolicy" />

    <TextView
        android:id="@+id/tvExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:fontFamily="@font/montserrat_alternates"
        android:gravity="start"
        android:padding="16dp"
        android:text="@string/exit"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        tools:ignore="KeyboardInaccessibleWidget" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/descTextColor4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvExit" />


</androidx.constraintlayout.widget.ConstraintLayout>